fix, style: navbar covered by other elements

--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -6,6 +6,7 @@
   top: 0;
   left: 0;
   background-color: #ffffff;
+  z-index: 50;
 }
 
 .container {
